--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check formatting
+      run: cargo fmt --all -- --check
+    - name: Run lint
+      run: cargo clippy --workspace --all-targets --verbose --all-features
     - name: Build
       run: cargo build --verbose
     - name: Run tests
