--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,5 +24,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       env:
-        API_KEY: ${{ secrets.API_KEY }}
+        X_API_KEY: ${{ secrets.API_KEY }}
       run: cargo test --verbose
