--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ categories = ["api-bindings"]
 log = "0.4.11"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.10.8", features = ["json"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tokio = { version = "0.2", features = ["macros"] }
+env_logger = "0.7.1"
